manifists/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-api-service
  namespace: default
spec:
  selector:
    app: blog-api
  type: NodePort
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: blog-api
    protocol: TCP
    port: 80
    targetPort: 8000
    nodePort: 30004
