manifists/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-api-ingress
  namespace: default
spec:
  rules:
  - host: fast-blog-api.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-api-service
            port:
              number: 80
